@@ -781,6 +781,12 @@ channel {
 	 */
 	max_chans_per_user = 25;
 
+	/*
+	 * max_chans_per_oper: The maximum number of channels an oper can
+	 * join/be on.
+	 */
+	max_chans_per_oper = 50;
+
 	/* quiet_on_ban: stop banned people talking in channels. */
 	quiet_on_ban = yes;
 
