@@ -256,7 +256,8 @@ channel {
 	use_knock = yes;
 	knock_delay = 5 minutes;
 	knock_delay_channel = 1 minute;
-	max_chans_per_user = 15;
+	max_chans_per_user = 25;
+	max_chans_per_oper = 50;
 	quiet_on_ban = yes;
 	max_bans = 25;
 	join_flood_count = 16;
