@@ -1913,7 +1913,8 @@ set_default_conf(void)
   ConfigChannel.use_knock = 1;
   ConfigChannel.knock_delay = 300;
   ConfigChannel.knock_delay_channel = 60;
-  ConfigChannel.max_chans_per_user = 15;
+  ConfigChannel.max_chans_per_user = 25;
+  ConfigChannel.max_chans_per_user = 50;
   ConfigChannel.quiet_on_ban = 1;
   ConfigChannel.max_bans = 25;
   ConfigChannel.default_split_user_count = 0;
