@@ -313,6 +313,7 @@ yes		{ yylval.number = 1; return TBOOL; }
 failed_oper_notice      { return FAILED_OPER_NOTICE; }
 max_accept              { return MAX_ACCEPT; }
 max_nick_changes        { return MAX_NICK_CHANGES; }
+max_chans_per_oper      { return MAX_CHANS_PER_OPER; }
 max_chans_per_user      { return MAX_CHANS_PER_USER; }
 max_nick_time           { return MAX_NICK_TIME; }
 anti_nick_flood         { return ANTI_NICK_FLOOD; }
